add data and overlay to .gitignore

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -6,7 +6,7 @@ headless = true
 gatherUsageStats = false
 
 [theme]
-base = "light"
+base = "dark"
 # backgroundColor="#FFFFFF"
 # primaryColor=
 # secondaryBackgroundColor =
