--- a/.gitignore
+++ b/.gitignore
@@ -164,5 +164,6 @@ cython_debug/
 .DS_Store
 pyrightconfig.json
 
-#data/players.json
-#data/commentators.json
+data/players.json
+data/commentators.json
+overlay
